--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Tue May 30 2023 10:20:43 GMT+0000 (Coordinated Universal Time) -->
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Jun 01 2023 02:55:02 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="indigofloyds-soybean-website.webflow.io" data-wf-page="6475428339f277007afc47f0"
     data-wf-site="6475428339f277007afc4798" data-wf-status="1">
 
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
-        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.0c37f2cc2.css"
+        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.af14dded0.css"
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
@@ -20,14 +20,17 @@
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="https://uploads-ssl.webflow.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://uploads-ssl.webflow.com/img/webclip.png" rel="apple-touch-icon" />
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
 </head>
 
 <body>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation-bar w-nav">
-        <div class="w-container"><a href="/" class="brand-link w-nav-brand">
-                <h1 class="brand-text">soyDNGP</h1>
+        <div class="w-container"><a href="/" class="brand-link w-nav-brand"><img
+                    src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2.jpg"
+                    loading="lazy" width="50" sizes="50px"
+                    srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-500.jpg 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-800.jpg 800w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-1600.jpg 1600w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2.jpg 1683w"
+                    alt="" class="image-3" />
+                <h1 class="brand-text">soyDNGP<br /></h1>
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/"
                     class="navigation-link w-nav-link">Home</a><a href="/contact" aria-current="page"
@@ -42,29 +45,29 @@
             <div class="section-title-group">
                 <h2 class="section-heading centered">Contact Us Today</h2>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
-                tristique. <br /><br />Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam
-                libero vitae erat. Aenean faucibus nibh et <br />justo cursus id rutrum lorem imperdiet. Nunc ut sem
-                vitae risus tristique posuere.</p>
+            <p>We highly value your thoughts, questions, and feedback. If you need assistance navigating our webserver,
+                require more information about SoyDNGP, or wish to share your insights and experiences, please
+                don&#x27;t hesitate to get in touch.For general inquiries, you can reach out to us at
+                wangxt881@gmail.com. <br />For technical support or assistance with the prediction models, please
+                contact our dedicated support team at [1798354140@qq.com].We strive to respond to all inquiries as
+                promptly as possible. <br />Additionally, you are encouraged to consult our Frequently Asked Questions
+                (FAQ) section for quick answers to common questions about SoyDNGP. We look forward to hearing from you
+                and assisting you with your research endeavors!</p>
             <div class="form-wrapper w-form">
-                
-                    <form id="email-form" name="email-form" data-name="Email Form" method="post" action="/send" class="form"><input
+                <form id="email-form" name="email-form" data-name="Email Form" method="post" action="/send" class="form"><input
                         type="text" class="form-field w-input" maxlength="256" name="Name" data-name="Name"
                         placeholder="Enter your name..." id="Name" required="" /><input type="email"
                         class="form-field w-input" maxlength="256" name="Email" data-name="Email"
                         placeholder="Enter your email..." id="Email" required="" /><textarea id="field-2" name="field-2"
-                        placeholder="Message" maxlength="5000" data-name="Field 2"
+                        maxlength="5000" data-name="Field 2" placeholder="Message"
                         class="form-field text-area w-input"></textarea><input type="submit" value="Send Carrier Pigeon"
                         data-wait="Please wait..." class="button full-width w-button" /></form>
-    
                 <div class="w-form-done">
                     <p>Thank you! Your submission has been received!</p>
                 </div>
                 <div class="w-form-fail">
                     <p>Oops! Something went wrong while submitting the form :(</p>
                 </div>
-                
-                
             </div>
         </div>
     </div>
@@ -72,15 +75,16 @@
         <div class="w-container">
             <div class="w-row">
                 <div class="spc w-col w-col-4">
-                    <h5>about Soydngp</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-                        diam libero vitae erat.</p>
+                    <h5 class="heading-2">aBOUT SoyDNGP</h5>
+                    <p class="paragraph">SoyDNGP, an advanced webserver designed to utilize the power of convolutional
+                        neural network-based models for the prediction of agronomic traits in soybean. Built to serve
+                        the burgeoning field of agriculture, our server supports the analysis of a comprehensive range
+                        of traits.</p>
                 </div>
                 <div class="spc w-col w-col-4">
-                    <h5>useful links</h5><a href="#" class="footer-link">Phasellus gravida semper nisi</a><a href="#"
-                        class="footer-link">Suspendisse nisl elit</a><a href="#" class="footer-link">Dellentesque
-                        habitant morbi</a><a href="#" class="footer-link">Etiam sollicitudin ipsum</a>
+                    <h5>useful links</h5><a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP
+                        page</a><a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors"
+                        class="footer-link">GRIN-Global website</a>
                 </div>
                 <div class="w-col w-col-4">
                     <h5>social</h5>
@@ -93,24 +97,18 @@
                             width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Facebook</a>
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4801_social-11.svg"
-                            width="20" alt="" class="info-icon" /><a href="#"
-                            class="footer-link with-icon">Pinterest</a></div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc482b_social-06.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Google</a>
-                    </div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc480e_social-12.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Webflow</a>
-                    </div>
+                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4826_social-33.svg"
+                            width="20" alt="" class="info-icon" /><a
+                            href="https://github.com/IndigoFloyd/SoybeanWebsite"
+                            class="footer-link with-icon">GitHub</a></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer center wf-section">
         <div class="w-container">
-            <div class="footer-text">Copyright XTeamLab. Made in Webflow.</div>
+            <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement,
+                Huazhong Agricultural University</div>
         </div><img
             src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001.png"
             loading="lazy" width="100" height="100"
