--- a/templates/test.html
+++ b/templates/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Jun 01 2023 02:46:06 GMT+0000 (Coordinated Universal Time) -->
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Jun 02 2023 12:27:31 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="indigofloyds-soybean-website.webflow.io" data-wf-page="6475428339f277007afc47ed"
     data-wf-site="6475428339f277007afc4798" data-wf-status="1">
 
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
-        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.af14dded0.css"
+        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.adf09cd99.css"
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
@@ -46,8 +46,7 @@
             <div data-ix="fade-in-bottom-page-loads" class="hero-subheading">discover, unearth secrets of soybean with
                 us.</div>
             <div data-ix="fade-in-bottom-page-loads" class="div-block"><a href="#Services" class="button">start
-                    now</a><a href="#LearnMore" class="hollow-button all-caps">Learn more</a><a href="#manual"
-                    class="hollow-button all-caps">manual &amp; tips</a></div>
+                    now</a><a href="#LearnMore" class="hollow-button all-caps">Learn more</a></div>
         </div>
     </div>
     <div class="section wf-section">
@@ -98,7 +97,7 @@
                 <div class="w-col w-col-6">
                     <div class="white-box transparent"><img
                             src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353.png"
-                            sizes="(max-width: 767px) 85vw, (max-width: 991px) 43vw, 430px"
+                            sizes="(max-width: 479px) 85vw, (max-width: 767px) 90vw, (max-width: 991px) 323.99737548828125px, 430px"
                             srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353-p-500.png 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353-p-800.png 800w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353-p-1080.png 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353-p-1600.png 1600w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f33f51f80b0cd8ea9fd4_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601092353.png 1620w"
                             alt="" class="fullwidth-image" />
                         <h3 class="white-text">Traits lookup</h3>
@@ -111,7 +110,7 @@
                 <div class="w-col w-col-6">
                     <div class="white-box transparent"><img
                             src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751.png"
-                            sizes="(max-width: 767px) 85vw, (max-width: 991px) 43vw, 430px"
+                            sizes="(max-width: 479px) 85vw, (max-width: 767px) 90vw, (max-width: 991px) 323.99737548828125px, 430px"
                             srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751-p-500.png 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751-p-800.png 800w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751-p-1080.png 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751-p-1600.png 1600w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f1dedfcdda9a799d8e2b_%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230601091751.png 1620w"
                             alt="" class="fullwidth-image" />
                         <h3 class="white-text">Traits Prediction</h3>
@@ -134,77 +133,53 @@
                 class="tabs-wrapper w-tabs">
                 <div class="tab-menu w-tab-menu"><a data-w-tab="Tab 1"
                         class="button tab w-inline-block w-tab-link w--current">
-                        <div>models structure</div>
+                        <div>SoyDNGP User Manual &amp; Tips</div>
                     </a><a data-w-tab="Tab 2" class="button tab w-inline-block w-tab-link">
-                        <div>qualitative models</div>
-                    </a><a data-w-tab="Tab 3" class="button tab w-inline-block w-tab-link">
-                        <div>quantitative models</div>
+                        <div>models structure</div>
                     </a></div>
                 <div class="w-tab-content">
                     <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
-                        <div><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 95vw, 940px"
-                                srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4838_photo-1422222948315-28aadb7a2cb8-p-1080x721.jpeg 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4838_photo-1422222948315-28aadb7a2cb8.jpg 1300w"
-                                src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4838_photo-1422222948315-28aadb7a2cb8.jpg"
-                                alt="" class="fullwidth-image" />
-                            <h2>Some Title Here</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                                elementum tristique. <br />Duis cursus, mi quis viverra ornare, eros dolor interdum
-                                nulla, ut commodo diam libero vitae erat. <br />Aenean faucibus nibh et justo cursus id
-                                rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <div class="div-block-2">
+                            <h2 class="heading-3">SoyDNGP User Manual &amp; Tips</h2>
+                            <p class="paragraph-2">Welcome to SoyDNGP, our webserver powered by convolutional neural
+                                network-based algorithms. This platform was developed through the meticulous analysis of
+                                genotypes and phenotypes from 5,000 randomly selected soybean accessions.<br />The
+                                genotype data were sourced and filtered using the SoySNP50K chip available on the
+                                SoyBase webserver. For more details on this, please visit the SoyBase SNP page here. The
+                                phenotypes for the 11 agronomy traits were downloaded from the GRIN-Global
+                                website.<br /><strong><br />If you&#x27;re a first-time user of our prediction function,
+                                    please take note of the following important tips:<br /><br />Compatibility:
+                                </strong>To accommodate a broad spectrum of soybean genotypes, our modules were trained
+                                using a carefully selected set of 34,624 SNPs, based on the overlap of the SoySNP50K
+                                chip and resequencing data of soybean. These SNPs are built into our webserver and
+                                automatically selected when you submit your VCF files. Missing loci are filled using the
+                                reference base, which in our case is version 2 of the Williams 82 genome. Please note
+                                that if your reference is a different soybean genome version (like version 4),
+                                you&#x27;ll need to convert it to version 2 to ensure accurate and reliable
+                                results.<br /><strong><br />Missing Data:</strong> If you&#x27;re submitting a large
+                                number of samples (in the hundreds) for phenotype prediction, we recommend using Beagle
+                                software to phase your VCF file first. This will help you to capture as many valid SNPs
+                                as possible.<br /><strong><br />Large-scale Predictions:</strong> If you have thousands
+                                of soybean samples and wish to conduct local predictions, we&#x27;ve got you covered! We
+                                offer open-source code and pre-trained modules for local usage. Should you encounter any
+                                issues or questions, our dedicated team is ready and eager to
+                                assist.<br /><strong><br />File Submissions:</strong> Our server is smart! If you submit
+                                the same file within the same day, it will recognize it as a duplicate, saving you the
+                                hassle of re-submitting.We hope you enjoy your journey with SoyDNGP, and look forward to
+                                joining you in unearthing the hidden secrets of soybean genetics.</p>
                         </div>
                     </div>
                     <div data-w-tab="Tab 2" class="w-tab-pane">
-                        <div><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 95vw, 940px"
-                                srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4823_5fcb0a55-p-500x334.jpeg 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4823_5fcb0a55.jpg 1300w"
-                                src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4823_5fcb0a55.jpg"
-                                alt="" class="fullwidth-image" />
-                            <h2>Heading</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                                elementum tristique. <br />Duis cursus, mi quis viverra ornare, eros dolor interdum
-                                nulla, ut commodo diam libero vitae erat.<br />Aenean faucibus nibh et justo cursus id
-                                rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                        </div>
-                    </div>
-                    <div data-w-tab="Tab 3" class="w-tab-pane">
-                        <div><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 95vw, 940px"
-                                srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4842_5cf8b62b-p-500x333.jpeg 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4842_5cf8b62b-p-800x532.jpeg 800w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4842_5cf8b62b-p-1080x718.jpeg 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4842_5cf8b62b.jpg 1300w"
-                                src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4842_5cf8b62b.jpg"
-                                alt="" class="fullwidth-image" />
-                            <h2>SoyDNGP User Manual &amp; Tips</h2>
-                        </div>
-                        <p>s </p>
+                        <div><img width="338"
+                                sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 727.9947509765625px, 940px"
+                                src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6478024e8b6575ffc0dbf7c6_RmlndXJlKzE%3D1.jpg"
+                                srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6478024e8b6575ffc0dbf7c6_RmlndXJlKzE%3D1-p-500.jpg 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6478024e8b6575ffc0dbf7c6_RmlndXJlKzE%3D1.jpg 676w"
+                                alt="" class="fullwidth-image" /></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <section id="manual" class="section-2 wf-section">
-        <div class="w-container">
-            <h2 class="heading-3">SoyDNGP User Manual &amp; Tips</h2>
-            <p class="paragraph-2">Welcome to SoyDNGP, our webserver powered by convolutional neural network-based
-                algorithms. This platform was developed through the meticulous analysis of genotypes and phenotypes from
-                5,000 randomly selected soybean accessions.<br />The genotype data were sourced and filtered using the
-                SoySNP50K chip available on the SoyBase webserver. For more details on this, please visit the SoyBase
-                SNP page here. The phenotypes for the 11 agronomy traits were downloaded from the GRIN-Global
-                website.<br /><strong><br />If you&#x27;re a first-time user of our prediction function, please take
-                    note of the following important tips:<br /><br />Compatibility: </strong>To accommodate a broad
-                spectrum of soybean genotypes, our modules were trained using a carefully selected set of 34,624 SNPs,
-                based on the overlap of the SoySNP50K chip and resequencing data of soybean. These SNPs are built into
-                our webserver and automatically selected when you submit your VCF files. Missing loci are filled using
-                the reference base, which in our case is version 2 of the Williams 82 genome. Please note that if your
-                reference is a different soybean genome version (like version 4), you&#x27;ll need to convert it to
-                version 2 to ensure accurate and reliable results.<br /><strong><br />Missing Data:</strong> If
-                you&#x27;re submitting a large number of samples (in the hundreds) for phenotype prediction, we
-                recommend using Beagle software to phase your VCF file first. This will help you to capture as many
-                valid SNPs as possible.<br /><strong><br />Large-scale Predictions:</strong> If you have thousands of
-                soybean samples and wish to conduct local predictions, we&#x27;ve got you covered! We offer open-source
-                code and pre-trained modules for local usage. Should you encounter any issues or questions, our
-                dedicated team is ready and eager to assist.<br /><strong><br />File Submissions:</strong> Our server is
-                smart! If you submit the same file within the same day, it will recognize it as a duplicate, saving you
-                the hassle of re-submitting.We hope you enjoy your journey with SoyDNGP, and look forward to joining you
-                in unearthing the hidden secrets of soybean genetics.</p>
-        </div>
-    </section>
     <div class="footer wf-section">
         <div class="w-container">
             <div class="w-row">
@@ -232,8 +207,9 @@
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img
                             src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4826_social-33.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Github</a>
-                    </div>
+                            width="20" alt="" class="info-icon" /><a
+                            href="https://github.com/IndigoFloyd/SoybeanWebsite"
+                            class="footer-link with-icon">GitHub</a></div>
                 </div>
             </div>
         </div>
