--- a/templates/errors.html
+++ b/templates/errors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Jun 01 2023 03:16:33 GMT+0000 (Coordinated Universal Time) -->
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Jun 02 2023 11:44:57 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="indigofloyds-soybean-webs-36836248ee4d2.webflow.io" data-wf-page="6475cf3c0daa31d35dd86c02"
     data-wf-site="6475cf3c0daa31d35dd86c04" data-wf-status="1">
 
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
-        href="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/css/indigofloyds-soybean-webs-36836248ee4d2.webflow.37cd33d79.css"
+        href="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/css/indigofloyds-soybean-webs-36836248ee4d2.webflow.90c8f6b6f.css"
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
@@ -34,7 +34,7 @@
                 <h1 class="brand-text-2">soyDNGP<br /></h1>
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/"
-                    class="navigation-link-2 w-nav-link">Home</a><a href="/concat"
+                    class="navigation-link-2 w-nav-link">Home</a><a href="/contact"
                     class="navigation-link-2 w-nav-link">Contact</a></nav>
             <div class="hamburger-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
@@ -47,21 +47,18 @@
                 <h2 class="section-heading centered">Sorry, but there might be some errors.</h2>
             </div>
             <h2 class="section-heading centered"><a href="/contact" aria-current="page"
-                class="link-warning" style="text-decoration:none">contact</a> us if it is always like this.</h2>
+                    class="link-warning" style="text-decoration: none">contact</a> us if it is always like this.</h2>
         </div>
     </div>
-    <section class="wf-section">
-        <div class="container w-container"></div>
-    </section>
     <div class="footer wf-section">
         <div class="w-container">
             <div class="w-row">
                 <div class="spc w-col w-col-4">
-                    <h5>about Soydngp</h5>
-                    <p class="paragraph-2">SoyDNGP, an advanced webserver designed to utilize the power of convolutional
-                        neural network-based models for the prediction of agronomic traits in soybean. Built to serve
-                        the burgeoning field of agriculture, our server supports the analysis of a comprehensive range
-                        of traits.</p>
+                    <h5 class="heading">aBOUT SoyDNGP</h5>
+                    <p>SoyDNGP, an advanced webserver designed to utilize the power of convolutional neural
+                        network-based models for the prediction of agronomic traits in soybean. Built to serve the
+                        burgeoning field of agriculture, our server supports the analysis of a comprehensive range of
+                        traits.</p>
                 </div>
                 <div class="spc w-col w-col-4">
                     <h5>useful links</h5><a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP
@@ -71,15 +68,15 @@
                 <div class="w-col w-col-4">
                     <h5>social</h5>
                     <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c48_social-18.svg"
+                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4839_social-18.svg"
                             width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Twitter</a>
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c1b_social-03.svg"
+                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc481a_social-03.svg"
                             width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Facebook</a>
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c36_social-33.svg"
+                            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6479d3a02cbd46f538b0029f_social-33.svg"
                             width="20" alt="" class="info-icon" /><a
                             href="https://github.com/IndigoFloyd/SoybeanWebsite"
                             class="footer-link with-icon">GitHub</a></div>
@@ -90,19 +87,18 @@
     <div class="footer center wf-section">
         <div class="w-container">
             <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement,
-                Huazhong Agricultural University</div>
-        </div><img
-            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png"
-            loading="lazy" width="100" height="100"
-            srcset="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001-p-500.png 500w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png 770w"
-            sizes="100px" alt="" />
+                Huazhong Agricultural University<br /></div><img
+                src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png"
+                loading="lazy" width="100" sizes="100px"
+                srcset="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001-p-500.png 500w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png 770w"
+                alt="" class="image-4" />
+        </div>
     </div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475cf3c0daa31d35dd86c04"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
     <script src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/js/webflow.321689bca.js"
         type="text/javascript"></script>
-    <script src="../static/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
