--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Tue May 30 2023 10:20:43 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="indigofloyds-soybean-website.webflow.io" data-wf-page="6475428339f277007afc47f0"
-    data-wf-site="6475428339f277007afc4798" data-wf-status="1">
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Jun 02 2023 11:43:24 GMT+0000 (Coordinated Universal Time) -->
+<html data-wf-domain="indigofloyds-soybean-webs-36836248ee4d2.webflow.io" data-wf-page="6475cf3c0daa31d35dd86c02"
+    data-wf-site="6475cf3c0daa31d35dd86c04" data-wf-status="1">
 
 <head>
     <meta charset="utf-8" />
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
-        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.0c37f2cc2.css"
+        href="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/css/indigofloyds-soybean-webs-36836248ee4d2.webflow.f47f61297.css"
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
@@ -20,53 +20,49 @@
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="https://uploads-ssl.webflow.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://uploads-ssl.webflow.com/img/webclip.png" rel="apple-touch-icon" />
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
 </head>
 
 <body>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation-bar w-nav">
-        <div class="w-container"><a href="/" class="brand-link w-nav-brand">
-                <h1 class="brand-text">soyDNGP</h1>
+        <div class="w-container"><a href="/" class="brand-link-2 w-nav-brand"><img
+                    src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2.jpg"
+                    loading="lazy" width="50" sizes="50px"
+                    srcset="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-500.jpg 500w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-800.jpg 800w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-1600.jpg 1600w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2.jpg 1683w"
+                    alt="" class="image-3" />
+                <h1 class="brand-text-2">soyDNGP<br /></h1>
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/"
-                    class="navigation-link w-nav-link">Home</a><a href="/contact" aria-current="page"
-                    class="navigation-link w-nav-link w--current">Contact</a></nav>
+                    class="navigation-link-2 w-nav-link">Home</a><a href="/contact"
+                    class="navigation-link-2 w-nav-link">Contact</a></nav>
             <div class="hamburger-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
             </div>
         </div>
     </div>
-    <div class="section wf-section">
-        <div class="w-container">
+    <div class="section1 wf-section">
+        <div class="container-2 w-container">
             <div class="section-title-group">
-                <h2 class="section-heading centered">We've received your email</h2>
+                <h2 class="section-heading centered">WE&#x27;VE RECEIVED YOUR EMAIL</h2>
             </div>
-            <p>Thank you for your coopertion, we will solve that as soon as we can.</p>
-            
-                <div class="w-form-done">
-                    <p>Thank you! Your submission has been received!</p>
-                </div>
-                <div class="w-form-fail">
-                    <p>Oops! Something went wrong while submitting the form :(</p>
-                </div>
-                
-                
+            <h2 class="section-heading centered">Thank
+                    you for your cooperation<br />we will solve that as soon as we can</h2>
         </div>
     </div>
     <div class="footer wf-section">
         <div class="w-container">
             <div class="w-row">
                 <div class="spc w-col w-col-4">
-                    <h5>about Soydngp</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-                        diam libero vitae erat.</p>
+                    <h5 class="heading">aBOUT SoyDNGP</h5>
+                    <p>SoyDNGP, an advanced webserver designed to utilize the power of convolutional neural
+                        network-based models for the prediction of agronomic traits in soybean. Built to serve the
+                        burgeoning field of agriculture, our server supports the analysis of a comprehensive range of
+                        traits.</p>
                 </div>
                 <div class="spc w-col w-col-4">
-                    <h5>useful links</h5><a href="#" class="footer-link">Phasellus gravida semper nisi</a><a href="#"
-                        class="footer-link">Suspendisse nisl elit</a><a href="#" class="footer-link">Dellentesque
-                        habitant morbi</a><a href="#" class="footer-link">Etiam sollicitudin ipsum</a>
+                    <h5>useful links</h5><a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP
+                        page</a><a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors"
+                        class="footer-link">GRIN-Global website</a>
                 </div>
                 <div class="w-col w-col-4">
                     <h5>social</h5>
@@ -79,34 +75,28 @@
                             width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Facebook</a>
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4801_social-11.svg"
-                            width="20" alt="" class="info-icon" /><a href="#"
-                            class="footer-link with-icon">Pinterest</a></div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc482b_social-06.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Google</a>
-                    </div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc480e_social-12.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Webflow</a>
-                    </div>
+                            src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6479d3a02cbd46f538b0029f_social-33.svg"
+                            width="20" alt="" class="info-icon" /><a
+                            href="https://github.com/IndigoFloyd/SoybeanWebsite"
+                            class="footer-link with-icon">GitHub</a></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer center wf-section">
         <div class="w-container">
-            <div class="footer-text">Copyright XTeamLab. Made in Webflow.</div>
-        </div><img
-            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001.png"
-            loading="lazy" width="100" height="100"
-            srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001-p-500.png 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001.png 770w"
-            sizes="100px" alt="" />
+            <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement,
+                Huazhong Agricultural University<br /></div><img
+                src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png"
+                loading="lazy" width="100" sizes="100px"
+                srcset="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001-p-500.png 500w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/6475cf3c0daa31d35dd86c5c_-nre42yj30rlfcjd7-001.png 770w"
+                alt="" class="image-4" />
+        </div>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798"
+    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475cf3c0daa31d35dd86c04"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/js/webflow.7382aa6cc.js"
+    <script src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/js/webflow.321689bca.js"
         type="text/javascript"></script>
 </body>
 
