--- a/templates/Search.html
+++ b/templates/Search.html
@@ -32,15 +32,15 @@
 <body>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation-bar w-nav">
-        <div class="w-container"><a href="#" class="brand-link-2 w-nav-brand"><img
+        <div class="w-container"><a href="/" class="brand-link-2 w-nav-brand"><img
                     src="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2.jpg"
                     loading="lazy" width="50" sizes="50px"
                     srcset="https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-500.jpg 500w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-800.jpg 800w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2-p-1600.jpg 1600w, https://uploads-ssl.webflow.com/6475cf3c0daa31d35dd86c04/64780cf8c66751843bcc910e_logo2.jpg 1683w"
                     alt="" class="image-3" />
                 <h1 class="brand-text-2">soyDNGP<br /></h1>
             </a>
-            <nav role="navigation" class="navigation-menu w-nav-menu"><a href="#"
-                    class="navigation-link-2 w-nav-link">Home</a><a href="#"
+            <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/"
+                    class="navigation-link-2 w-nav-link">Home</a><a href="/contact"
                     class="navigation-link-2 w-nav-link">Contact</a></nav>
             <div class="hamburger-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
