--- a/templates/UploadData.html
+++ b/templates/UploadData.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact</title>
+    <title>Upload and Predict</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
