--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>IndigoFloyd&#x27;s Soybean Website</title>
+    <title>Welcome to SoyDNGP</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Webflow" name="generator" />
     <link
