--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,151 @@
-{{ result }}
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6481afe560ae807f1d6cf125" data-wf-site="6475428339f277007afc4798">
+
+<head>
+  <meta charset="utf-8">
+  <title>Predict</title>
+  <meta content="Predict" property="og:title">
+  <meta content="Predict" property="twitter:title">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  <link href="../static/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../static/css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "PT Serif:400,400italic,700,700italic", "Roboto:300,regular,500"] } });</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+  <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="../static/images/webclip.png" rel="apple-touch-icon">
+  <link href="../static/css/fileinput.min.css" rel="stylesheet" />
+  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js" crossorigin="anonymous"></script>
+  <script src="../static/js/fileinput.min.js" type="text/javascript"></script>
+  <style>
+    .button-container {
+      display: flex;
+      justify-content: space-evenly;
+    }
+
+    .form-check-input:checked {
+      background-color: #face6a;
+      border-color: #face6a;
+    }
+  </style>
+</head>
+
+<body>
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+    role="banner" class="navigation-bar w-nav">
+    <div class="w-container">
+      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50"
+          sizes="50px"
+          srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w"
+          alt="" class="image-3">
+        <h1 class="brand-text">soyDNGP<br></h1>
+      </a>
+      <nav role="navigation" class="navigation-menu w-nav-menu">
+        <a href="/" class="navigation-link w-nav-link">Home</a>
+        <a href="/contact" class="navigation-link w-nav-link">Contact</a>
+        <a href="/LearnMore" class="navigation-link w-nav-link">Learn More</a>
+      </nav>
+      <div class="hamburger-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section lookupsection wf-section">
+    <div class="w-container">
+      <div class="section-title-group">
+        <h2 class="section-heading centered lookupheading">Here is your results</h2>
+      </div>
+      <p id="thanks-text" class="thankstext">Now you can download them for free. Tell us if you think we could do better.</p>
+    </div>
+  </div>
+  {% if not df.empty %}
+  <section style="padding: 80px 10px; border-bottom: 2px solid #000000;">
+    <div class="w-container">
+      <div class="section-title-group">
+        <h2 class="section-heading centered text-secondary">Predict results</h2>
+        <div style="width: 100%; overflow:auto;">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                {% for col in col_names %}
+                <th>
+                  <h5 class="text">{{ col }}</h5>
+                </th>
+                {% endfor %}
+              </tr>
+            </thead>
+            <tbody>
+              {% for row in df.iterrows() %}
+              <tr>
+                {% for col in row[1] %}
+                <td>
+                  <h5 class="text">{{ col }}</h5>
+                </td>
+                {% endfor %}
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="button-container">
+        {% if page > 1 %}
+        <a href="/pageprev"><button class="button">Prev</button></a>
+        {% endif %}
+        {% if page < total_pages %} <a href="/pagenext"><button class="button">Next</button></a>
+          {% endif %}
+          <a href="/download"><button class="button">Download</button></a>
+      </div>
+    </div>
+  </section>
+  {% endif %}
+
+
+
+
+  <div class="footer wf-section">
+    <div class="w-container">
+      <div class="w-row">
+        <div class="spc w-col w-col-6">
+          <h5 class="heading">aBOUT SoyDNGP</h5>
+          <p class="paragraph-3">SoyDNGP, an advanced webserver designed to utilize the power of convolutional neural
+            network-based models for the prediction of agronomic traits in soybean. Built to serve the burgeoning field
+            of agriculture, our server supports the analysis of a comprehensive range of traits.</p>
+        </div>
+        <div class="spc w-col w-col-6">
+          <h5>useful links</h5>
+          <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
+          <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt=""
+              class="info-icon">
+            <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer center footer2 wf-section">
+    <div class="w-container">
+      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong
+        Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy"
+        width="100" sizes="100px"
+        srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w"
+        alt="" class="image">
+    </div>
+  </div>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+  <script src="../static/js/webflow.js" type="text/javascript"></script>
+  <script src="../static/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
