--- a/templates/result.html
+++ b/templates/result.html
@@ -61,7 +61,7 @@
   <div class="section lookupsection wf-section">
     <div class="w-container">
       <div class="section-title-group">
-        <h2 class="section-heading centered lookupheading">Here is your results</h2>
+        <h2 class="section-heading centered lookupheading">Here are your results</h2>
       </div>
       <p id="thanks-text" class="thankstext">Now you can download them for free. Tell us if you think we could do better.</p>
     </div>
