--- a/templates/learnmore.html
+++ b/templates/learnmore.html
@@ -22,7 +22,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
     <div class="w-container">
-      <a href="index.html" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
+      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
         <h1 class="brand-text">soyDNGP<br></h1>
       </a>
       <nav role="navigation" class="navigation-menu w-nav-menu">
