--- a/templates/learnmore.html
+++ b/templates/learnmore.html
@@ -18,8 +18,38 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="../static/images/webclip.png" rel="apple-touch-icon">
+  <script src="https://map.qq.com/api/gljs?v=1.exp&key=GORBZ-Y27C5-R3GIZ-I6SFZ-BR7U6-3JB6A"></script>
+  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <script>
+    function initMap() {
+      //定义地图中心点坐标
+      var center = new TMap.LatLng(30.474852, 114.356769)
+      //定义map变量，调用 TMap.Map() 构造函数创建地图
+      var map = new TMap.Map(document.getElementById('container'), {
+        center: center,//设置地图中心点坐标
+        zoom: 1,   //设置地图缩放级别
+        pitch: 0,  //设置俯仰角
+        rotation: 0    //设置地图旋转角度
+      });
+      //创建并初始化MultiMarker
+      var markerLayer = new TMap.MultiMarker({
+        map: map, //指定地图容器
+        //点标记数据数组
+        geometries:[
+        {% for marker in markers %}
+        {
+            "id": {{ marker.id }},
+            "styleId": "marker",
+            "position": new TMap.LatLng({{ marker.lat }}, {{ marker.lng }})
+        },
+        {% endfor %}
+        ]
+        // geometries: marker
+      });
+    }
+  </script>
 </head>
-<body>
+<body onload="initMap()">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
     <div class="w-container">
       <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
@@ -63,6 +93,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="w-container">
+      <div class="section-title-group">
+        <h2 class="section-heading centered">Our Service is for People Around the World</h2>
+        <p class="thankstext">Now we have served <span class="text-warning">{{ markers|length }}</span> users.</p>
+        <div id="container"></div>
       </div>
     </div>
   </div>
